# tlc-trip-record-data-project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  data.ts  index.css
dashboard/src/components/: ChartPanel.tsx  MetricCard.tsx  PipelinePhases.tsx  Sidebar.tsx
dashboard/src/views/: FeaturesView.tsx  MethodologyView.tsx  ModelsView.tsx  OverviewView.tsx  StabilityView.tsx
docs/: project_plan.md
models/: elasticnet_stable_model.joblib  lasso_stable_model.joblib  model_metadata.joblib  ridge_stable_model.joblib
notebooks/: 01_data_acquisition_and_cleaning.ipynb  02_exploratory_data_analysis.ipynb  03_time_series_decomposition.ipynb  04_feature_engineering_lags_and_windows.ipynb  05_feature_engineering_calendar_effects.ipynb  06_modelling_hyperparameter_optimization.ipynb  06b_scoring_experiment.ipynb  07_model_evaluation_and_comparison.ipynb
references/: model_evalutaion.md
reports/: data_dictionary_report.md  hyperparameter_optimization_scoring.md  nyc_taxi_demand_report.md
